# 2024_UWR

./: .gitignore  Log_24-11-05_20-57-00.anpp  Log_24-11-05_21-06-58.anpp  Log_24-11-05_21-07-12.anpp  Log_24-11-05_21-29-09.anpp  Log_24-11-05_21-57-32.anpp  Log_24-11-05_22-19-49.anpp  Log_24-11-05_22-20-20.anpp  imu_reader.py  sonar_confidence_log.csv
Analysis/: P_data_1302_P_.csv  P_data_13thNov_1302_t2_ptn_only.csv  P_data_13thNov_1302_t2_vel_only.csv  P_data_6thNov_1205_t2_ptn_only.csv  P_data_6thNov_1205_t2_vel_only.csv  confidence_case_1205.csv  confidence_case_13thNov_1302_best_t1_.csv  confidence_case_13thNov_1302_t2_ptn_only.csv  confidence_case_13thNov_1302_t2_vel_only.csv  confidence_case_6thNov_1205_Q_0.1_.csv  confidence_case_6thNov_1205_persist_20_.csv  confidence_case_6thNov_1205_t002.csv  confidence_case_6thNov_1205_t005.csv  confidence_case_6thNov_1205_t006.csv  confidence_case_6thNov_1205_t007.csv  confidence_case_6thNov_1205_t008.csv  confidence_case_6thNov_1205_t009.csv  confidence_case_6thNov_1205_t011.csv  confidence_case_6thNov_1205_t014.csv  confidence_case_6thNov_1205_t0_001.csv  confidence_case_6thNov_1205_t0_1.csv  confidence_case_6thNov_1205_t2_ptn_only.csv  confidence_case_6thNov_1205_t2_vel_only.csv  graphs.ipynb  graphs_clean_rope_stepper.ipynb  graphs_clean_rope_thruster.ipynb  optical_flow.ipynb  output_IMU_case_1302_t2_.csv  output_IMU_case_1302_t2_imu_only_.csv  output_IMU_case_13thNov_1302_best_t1_.csv  output_IMU_case_13thNov_1302_t2_ptn_only.csv  output_IMU_case_13thNov_1302_t2_vel_only.csv  output_IMU_case_6thNov_1205_Q_0.001_.csv  output_IMU_case_6thNov_1205_Q_0.01_.csv  output_IMU_case_6thNov_1205_Q_0.1_.csv  output_IMU_case_6thNov_1205_R_0.001_.csv  output_IMU_case_6thNov_1205_R_0.01_.csv  output_IMU_case_6thNov_1205_R_0.1_.csv  output_IMU_case_6thNov_1205_best_t1_.csv  output_IMU_case_6thNov_1205_best_t2_.csv  (+71 more)
default_path.csv2024_10_04_17_19_08.bag/: metadata.yaml
default_path.csv2024_10_04_17_21_31.bag/: metadata.yaml
default_path.csv2024_10_04_18_18_17.bag/: metadata.yaml
default_path.csv2024_10_04_18_20_48.bag/: metadata.yaml
default_path.csv2024_10_05_14_44_11.bag/: metadata.yaml
default_path.csv2024_10_05_14_46_15.bag/: metadata.yaml
default_path.csv2024_10_05_14_46_41.bag/: metadata.yaml
default_path.csv2024_10_05_14_52_50.bag/: metadata.yaml
default_path.csv2024_10_05_14_56_56.bag/: metadata.yaml
default_path.csv2024_10_05_16_12_33.bag/: metadata.yaml
default_path.csv2024_10_05_16_12_54.bag/: metadata.yaml
default_path.csv2024_10_05_16_24_17.bag/: metadata.yaml
default_path.csv2024_10_05_16_24_58.bag/: default_path.csv2024_10_05_16_24_58.bag_0.db3  metadata.yaml
default_path.csv2024_10_08_19_16_46.bag/: default_path.csv2024_10_08_19_16_46.bag_0.db3  metadata.yaml
default_path.csv2024_10_08_19_23_51.bag/: default_path.csv2024_10_08_19_23_51.bag_0.db3  metadata.yaml
default_path.csv2024_10_08_19_29_51.bag/: default_path.csv2024_10_08_19_29_51.bag_0.db3  metadata.yaml
default_path.csv2024_10_08_19_31_32.bag/: default_path.csv2024_10_08_19_31_32.bag_0.db3  metadata.yaml
default_path.csv2024_10_08_19_33_12.bag/: default_path.csv2024_10_08_19_33_12.bag_0.db3  metadata.yaml
default_path.csv2024_10_09_15_15_02.bag/: metadata.yaml
default_path.csv2024_10_25_11_05_55.bag/: metadata.yaml
default_path.csv2024_10_25_11_17_11.bag/: metadata.yaml
default_path.csv2024_11_05_20_44_09.bag/: metadata.yaml
default_path.csv2024_11_05_20_51_16.bag/: metadata.yaml
default_path.csv2024_11_05_21_47_51.bag/: default_path.csv2024_11_05_21_47_51.bag_0.db3
default_path.csv2024_11_06_12_17_29.bag/: default_path.csv2024_11_06_12_17_29.bag_0.db3  metadata.yaml
default_path.csv2024_11_06_12_19_33.bag/: default_path.csv2024_11_06_12_19_33.bag_0.db3  metadata.yaml
default_path.csv2024_11_06_12_35_13.bag/: default_path.csv2024_11_06_12_35_13.bag_0.db3
default_path.csv2024_11_08_11_12_22.bag/: metadata.yaml
default_path.csv2024_11_08_11_14_24.bag/: default_path.csv2024_11_08_11_14_24.bag_0.db3  metadata.yaml
default_path.csv2024_11_08_11_18_00.bag/: metadata.yaml
src/kalman_filter/: CMakeLists.txt  package.xml
src/kalman_filter/include/: ConfidenceLevel.h  ConfidenceLevelVariation2.h  bag_processing.h  imu_processing.h  kalman_filter.h  sonar_processing.h
src/kalman_filter/launch/: imu_launch.py  launch_0_01.py  launch_0_1.py  launch_0_5.py  launch_3dof.py  launch_3dof_stepper.py
src/kalman_filter/src/: grad_descent_confidence.cpp  imu_topic.cpp  kf.cpp  kf_3dof.cpp  kf_3dof_node.cpp  kf_v3_bag_processing.cpp  kf_v3_node.cpp  kf_v4.cpp  kf_v4_node.cpp  sonar_processing.cpp
src/sonar_msgs/: CMakeLists.txt
(+868 files in other folders)
